--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 }
 
 canvas {
-	background-color: #f0f0f0;
+	background-color: #e9e7e7;
 	border-radius: 5px;
 	margin: 0 auto;
 }
 
 body {
-	background: #242222;
+	background-color: #2d3436;
+	background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -21,7 +22,22 @@ body {
 
 h1 {
 	font-size: 40px;
-	margin: 20px;
+	margin: 20px auto;
 	font-family: 'Lucida Console Regular';
 	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	width: fit-content;
+	background: #5f5fff;
+}
+
+h2 {
+	font-size: 20px;
+	margin-bottom: 30px;
+	font-family: 'Lucida Console Regular';
+	color: white;
+	padding: 5px;
+	border-radius: 2.5px;
+	width: fit-content;
+	background: #ff5fa2;
 }
