--- a/style.css
+++ b/style.css
@@ -8,16 +8,23 @@ canvas {
 	background-color: #e9e7e7;
 	border-radius: 5px;
 	margin: 0 auto;
+	width: 95%;
+	margin-bottom: 80px;
 }
 
 body {
-	background-color: #2d3436;
-	background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+	background-color: #2c3133;
+	background-image: linear-gradient(335deg, #292f31 0%, #1f1c1c 84%);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	padding: 20px;
+	padding: 10px;
+	height: 100%;
+	width: 100%;
+	position: relative;
 }
 
 h1 {
@@ -29,10 +36,12 @@ h1 {
 	border-radius: 5px;
 	width: fit-content;
 	background: #5f5fff;
+	text-align: center;
 }
 
 h2 {
 	font-size: 20px;
+	text-align: center;
 	margin-bottom: 30px;
 	font-family: 'Lucida Console Regular';
 	color: white;
@@ -40,4 +49,22 @@ h2 {
 	border-radius: 2.5px;
 	width: fit-content;
 	background: #ff5fa2;
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	padding: 10px;
+	width: 100%;
+	font-size: 25px;
+	text-align: center;
+	color: white;
+	font-family: 'Lucida Console Regular';
+	background: #000000;
+}
+
+footer a {
+	text-decoration: underline;
+	-webkit-text-decoration-skip: edges;
+	color: #5f5fff;
 }
