--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ h2 {
 	background: #ff5fa2;
 }
 footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 0;
 	padding: 10px;
 	width: 100%;
-	font-size: 25px;
+	font-size: 1.5em;
 	text-align: center;
 	color: white;
 	font-family: 'Lucida Console Regular';
